# rust-waitlist

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
db/: db.sqlite-shm  db.sqlite-wal
migrations/2024-04-12-220228_create_waitlist/: down.sql  up.sql
src/: main.rs  waitlist_entry.rs
static/: index.html.tera
