[package]
name = "transparent-ai-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"

[dependencies.rocket_sync_db_pools]
version = "*"
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "*"
features = ["tera"]
